tests/syntax/bad/testfile-bad_ident1-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
void 1A() { }
